--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-torch>=1.9.0
-torchvision>=0.10.0
-Pillow>=8.0.0
-matplotlib>=3.3.0
-seaborn>=0.11.0
-scikit-learn>=0.24.0
-pandas>=1.1.0
-numpy>=1.19.0
-tqdm>=4.50.0
-jupyter>=1.0.0
+torch==2.0.1
+torchvision==0.15.2
+Pillow==10.0.0
+matplotlib==3.7.1
+seaborn==0.12.2
+scikit-learn==1.2.2
+pandas==2.0.3
+numpy==1.24.3
+tqdm==4.65.0
+jupyter==1.0.0
+opencv-python==4.8.0.74
